--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
   
+  <head>
+    <title>This is Madman's page!</html>
+  </head>
+  
   <body>
     This is the body of the html page.
   </body>
