--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>This is Madman's page!</title>
   </head>
   
+  <h1>This is the first header of this page</h1>
+  
   <body>
     This is the body of the html page.
   </body>
