--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
   
   <body>
     This is the body of the html page.
+    
+    <img src="https://octodex.github.com/images/vinyltocat.png">
+    
   </body>
   </html>
