Added the github link
Adds the github link to the index.html file

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <li>Instagram</li>
     <li>Twitter</li>
 </ul>
+     
+  <li><a href="https://github.com">This is a link to GitHub!</a></li>
+  
+
     
   </body>
   </html>
