Add the css page to index.html
Adds Css to the page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
   
   <head>
+      <link rel="stylesheet" href="style.css">
+    
     <title>This is Madman's page!</title>
   </head>
   
